--- a/linear regression.ipynb
+++ b/linear regression.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualizeing the Data"
+    "## Visualizing the Data"
    ]
   },
   {
